--- a/backend/config.env
+++ b/backend/config.env
@@ -1,7 +1,7 @@
 MONGO_URL=mongodb+srv://vibhay504_db_user:xDIam9bHuCcc2Sdg@cluster0.iqjovnq.mongodb.net/Hospital-Management
 PORT=5000
 CLOUDINARY_CLOUD_NAME=dl1lyatxr
-
+JWT_SECRET=124erf
 CLOUDINARY_API_KEY=464646712244688
 CLOUDINARY_API_SECRET=rh8EBMcopkeBYV5BM8eYe36SBmI
 
